--- a/website/minifig.toml
+++ b/website/minifig.toml
@@ -1,6 +1,6 @@
 [theme]
 primaryColor="#FFCD03"
-backgroundColor="#0099D4"
-secondaryBackgroundColor="#00AF4D"
-textColor="#FFCD03"
+backgroundColor="#55D6BE"
+secondaryBackgroundColor="#7D5BA6"
+textColor="#FC6471"
 font="sans serif"
