--- a/requirements_linux.txt
+++ b/requirements_linux.txt
@@ -1,7 +1,6 @@
 absl-py==1.3.0
 altair==4.2.0
 anyio==3.6.2
-appnope==0.1.3
 argon2-cffi==21.3.0
 argon2-cffi-bindings==21.2.0
 astroid==2.11.7
@@ -65,6 +64,7 @@ h5py==3.7.0
 htmlmin==0.1.12
 httpcore==0.15.0
 httpx==0.23.0
+huggingface-hub==0.16.4
 idna==3.4
 ImageHash==4.3.1
 imageio==2.22.2
@@ -115,6 +115,7 @@ memoized-property==1.0.3
 missingno==0.5.1
 mistune==0.8.4
 mlflow==2.1.1
+mpmath==1.3.0
 multimethod==1.8
 nbclassic==0.4.7
 nbclient==0.7.0
@@ -127,6 +128,18 @@ nltk==3.7
 notebook==6.4.12
 notebook_shim==0.2.0
 numpy==1.23.4
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==8.9.2.26
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.18.1
+nvidia-nvjitlink-cu12==12.2.140
+nvidia-nvtx-cu12==12.1.105
 oauthlib==3.2.2
 opt-einsum==3.3.0
 packaging==21.3
@@ -169,6 +182,7 @@ pylint==2.14.5
 Pympler==1.0.1
 pyparsing==3.0.9
 pyrsistent==0.18.1
+pytesseract==0.3.10
 pytest==7.1.3
 pytest-asyncio==0.19.0
 python-dateutil==2.8.2
@@ -179,7 +193,6 @@ pytz-deprecation-shim==0.1.0.post0
 PyWavelets==1.4.1
 PyYAML==6.0.1
 pyzmq==24.0.1
-pytesseract==0.3.10
 regex==2022.9.13
 requests==2.28.1
 requests-oauthlib==1.3.1
@@ -205,6 +218,7 @@ stack-data==0.5.1
 statsmodels==0.13.2
 stopit==1.1.2
 streamlit==1.11.1
+sympy==1.12
 tangled-up-in-unicode==0.2.0
 tenacity==8.1.0
 tensorboard==2.10.1
@@ -215,14 +229,13 @@ tensorflow-datasets==4.6.0
 tensorflow-estimator==2.10.0
 tensorflow-io-gcs-filesystem==0.27.0
 tensorflow-metadata==1.10.0
-tensorflow-metal==0.6.0
 termcolor==2.0.1
 terminado==0.16.0
 text-unidecode==1.3
 threadpoolctl==3.1.0
 tifffile==2022.10.10
-tokenizers==0.14.0
 tinycss2==1.2.1
+tokenizers==0.14.0
 toml==0.10.2
 tomli==2.0.1
 tomlkit==0.11.5
@@ -233,6 +246,7 @@ TPOT==0.11.7
 tqdm==4.64.1
 traitlets==5.5.0
 transformers==4.34.0
+triton==2.1.0
 typing_extensions==4.4.0
 tzdata==2022.5
 tzlocal==4.2
@@ -240,6 +254,7 @@ update-checker==0.18.0
 urllib3==1.26.12
 validators==0.20.0
 visions==0.7.5
+watchdog==2.1.9
 wcwidth==0.2.5
 webencodings==0.5.1
 websocket-client==1.4.1
