--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,6 @@ pandas==1.4.4
 tensorflow==2.10.0
 Pillow==9.1.1
 mlflow==2.1.1
+fastapi         # API framework
+uvicorn         # web server
+python-multipart
