--- a/requirements_mac_intel.txt
+++ b/requirements_mac_intel.txt
@@ -250,3 +250,8 @@ xgboost==1.6.2
 XlsxWriter==3.0.3
 yapf==0.32.0
 zipp==3.10.0
+# API
+fastapi         # API framework
+# pytz            # time zone management
+uvicorn         # web server
+python-multipart
