--- a/requirements_linux.txt
+++ b/requirements_linux.txt
@@ -266,3 +266,7 @@ XlsxWriter==3.0.3
 yapf==0.32.0
 zipp==3.10.0
 prefect
+# API
+fastapi         # API framework
+uvicorn         # web server
+python-multipart
