fix a few UI issues and prefect version for api

--- a/requirements_mac_intel.txt
+++ b/requirements_mac_intel.txt
@@ -250,6 +250,7 @@ xgboost==1.6.2
 XlsxWriter==3.0.3
 yapf==0.32.0
 zipp==3.10.0
+prefect==2.14.11
 # API
 fastapi         # API framework
 # pytz            # time zone management
