--- a/requirements_linux.txt
+++ b/requirements_linux.txt
@@ -265,7 +265,7 @@ xgboost==1.6.2
 XlsxWriter==3.0.3
 yapf==0.32.0
 zipp==3.10.0
-prefect
+prefect==2.14.11
 # API
 fastapi         # API framework
 uvicorn         # web server
