--- a/requirements_linux.txt
+++ b/requirements_linux.txt
@@ -235,7 +235,7 @@ tqdm==4.64.1
 traitlets==5.5.0
 transformers==4.34.0
 triton==2.1.0
-typing_extensions==4.6.0
+typing_extensions==4.9.0
 tzdata==2022.5
 tzlocal==4.2
 update-checker==0.18.0
@@ -254,6 +254,6 @@ XlsxWriter==3.0.3
 yapf==0.32.0
 zipp==3.10.0
 # API
-fastapi         # API framework
+fastapi==0.105.0         # API framework
 uvicorn         # web server
 python-multipart
