--- a/requirements_mac_intel.txt
+++ b/requirements_mac_intel.txt
@@ -234,7 +234,7 @@ TPOT==0.11.7
 tqdm==4.64.1
 traitlets==5.5.0
 transformers==4.34.0
-typing_extensions==4.6.0
+typing_extensions==4.9.0
 tzdata==2022.5
 tzlocal==4.2
 update-checker==0.18.0
@@ -252,6 +252,6 @@ XlsxWriter==3.0.3
 yapf==0.32.0
 zipp==3.10.0
 # API
-fastapi         # API framework
+fastapi==0.105.0         # API framework
 uvicorn         # web server
 python-multipart
